wacc/test/golden/semanticErr.expressions.lessPairExpr
# evaluating less-than on references

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(int,int) x = newpair(1,2) ;
  println x;
  pair(int,int) y = newpair(2,3) ;
  println y;
  println x < y
end


In test/wacc_examples/invalid/semanticErr/expressions/lessPairExpr.wacc (line 16, column 13):
type error: expected a value of unknown type but found a pair of an int and an int (pair(int, int))
>   println y;
>   println x < y
>             ^
> end

